data/derived/sp14/progs/unify/prog3384.ml.out
Characters 59-74:
  |(h::t) -> (listReverse t)
             ^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
